# jwt-login

./: .env  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 7afd46f09371_add_user_table.py  bdd124a7cb66_add_user_table.py
src/app/: main.py
src/config/: database.py  settings.py
src/endpoints/: router.py
src/endpoints/v1/: __init__.py  user.py
src/entities/: __init__.py  base.py  user.py
src/models/: user.py
src/services/: __init__.py  auth.py  base.py  user.py
