[tool.poetry]
name = "jwt-login"
version = "0.1.0"
description = ""
authors = ["cloudkarol <slusarczykkar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvloop = "^0.16.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
python-dotenv = "^0.20.0"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
